Fixes for compilation and running tests with UnsafeBuffer implementation